# src/modules/master-data/master-data.controller.ts
@@ -14,4 +14,26 @@ export class MasterDataController {
   async addFleetType(@Body() body: { type: string; label: string }) {
     return this.masterDataService.addFleetType(body.type, body.label);
   }
+
+  @Get('product-categories')
+  async getProductCategories() {
+    return this.masterDataService.getProductCategories();
+  }
+
+  @Post('product-categories')
+  async addProductCategory(@Body() body: { name: string; grades: string[] }) {
+    return this.masterDataService.addProductCategory(body.name, body.grades);
+  }
+
+  @Post('delete/fleet-types')
+  async deleteFleetType(@Body() body: { type: string }) {
+    return this.masterDataService.deleteFleetType(body.type);
+  }
+
+  @Post('delete/product-categories')
+  async deleteProductCategory(@Body() body: { name: string }) {
+    return this.masterDataService.deleteProductCategory(body.name);
+  }
+
+
 }
